[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Utils/Gamefeel/RaceEnd.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/Fonts/Big_countdown.tres" type="DynamicFont" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

// Ranges from 0 to 1 over the course of the transition.
// We use this to actually animate the shader.
uniform float progress : hint_range(0, 1);

// Size of each diamond, in pixels.
uniform float diamondPixelSize = 10.0f;

void fragment() {
	float xFraction = fract(FRAGCOORD.x / diamondPixelSize);
	float yFraction = fract(FRAGCOORD.y / diamondPixelSize);
	float xDistance = abs(xFraction - 0.5);
	float yDistance = abs(yFraction - 0.5);
	if (xDistance + yDistance + UV.x + UV.y > progress * 4.0f) {
		discard;
	}
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/progress = 0.0
shader_param/diamondPixelSize = 45.0

[node name="End" type="Node"]
script = ExtResource( 1 )

[node name="TransitionTimer" type="Timer" parent="."]
one_shot = true

[node name="EndUI" type="CanvasLayer" parent="."]
layer = 10

[node name="Control" type="Control" parent="EndUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="EndUI/Control"]
anchor_left = 0.0556225
anchor_top = 0.0973215
anchor_right = 0.943623
anchor_bottom = 0.897321
margin_left = -44.4
margin_top = -22.4
margin_right = 44.4
margin_bottom = 22.4
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 222, 112 )
custom_fonts/font = ExtResource( 2 )
text = "VICTORY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Transition" type="ColorRect" parent="EndUI/Control"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Transition_tween" type="Tween" parent="."]
